r2e-compile-tests/cases/modules/fail/module_controller_dep_not_in_scope.stderr
error[E0277]: `Pool` is not in this feature module's scope
  --> cases/modules/fail/module_controller_dep_not_in_scope.rs:45:54
   |
45 |     let _ = r2e::AppBuilder::new().register_module::<BadModule>();
   |                                                      ^^^^^^^^^ the module neither provides nor imports `Pool`
   |
   = help: the trait `InModuleScope<Pool, _>` is not implemented for `TNil`
   = note: a module's providers and controllers may depend only on the module's own provided types plus its declared `Imports`
   = note: add a provider for `Pool` to the module's `Providers`, or declare it in the module's `Imports`
help: the following other types implement trait `InModuleScope<H, Idx>`
  --> $WORKSPACE/r2e-core/src/module.rs
   |
   | impl<H, T> InModuleScope<H, Here> for TCons<H, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TCons<H, T>` implements `InModuleScope<H, Here>`
   | impl<H, X, T, I> InModuleScope<H, There<I>> for TCons<X, T> where T: InModuleScope<H, I> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `TCons<X, T>` implements `InModuleScope<H, There<I>>`
   = note: required for `TCons<Svc, TNil>` to implement `InModuleScope<Pool, There<_>>`
   = note: required for `TCons<Pool, TNil>` to implement `ModuleDepsSatisfied<TCons<Svc, TNil>, (There<_>, ())>`
note: required by a bound in `register_module`
  --> $WORKSPACE/r2e-core/src/builder/registration.rs
   |
   |     fn register_module<M>(self) -> ModuleRegistered<M, P, R, Mods>
   |        --------------- required by a bound in this associated function
...
   |         <M::Controllers as ControllerDepsList>::Deps: ModuleDepsSatisfied<ModuleScope<M>, CtrlIdx>,
   |                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RegisterModule::register_module`
